--- a/goal-app/Gemfile
+++ b/goal-app/Gemfile
@@ -7,6 +7,7 @@ ruby "3.1.1"
 gem "rails", "~> 7.0.5"
 gem 'rspec'
 
+
 # The original asset pipeline for Rails [https://github.com/rails/sprockets-rails]
 gem "sprockets-rails"
 
@@ -52,6 +53,10 @@ gem "sassc-rails"
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "byebug", platforms: %i[ mri mingw x64_mingw ]
+  gem "rspec-rails"
+  gem "factory_bot_rails"
+  gem "faker"
+  gem "shoulda-matchers"
 end
 
 group :development do
@@ -62,7 +67,13 @@ group :development do
   # gem "rack-mini-profiler"
 
   # Speed up commands on slow machines / big apps [https://github.com/rails/spring]
-  # gem "spring"
+  gem "spring"
+  gem "spring-commands-rspec"
+  gem "guard-rspec"
+  gem "annotate"
+  gem "pry-rails"
+  gem "better_errors"
+  gem "binding_of_caller"
 end
 
 group :test do
@@ -70,4 +81,5 @@ group :test do
   gem "capybara"
   gem "selenium-webdriver"
   gem "webdrivers"
+  gem "launchy"
 end
